--- a/index.html
+++ b/index.html
@@ -3,12 +3,30 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Lecture 8</title>
+		<script src="https://kit.fontawesome.com/077d12e354.js" crossorigin="anonymous"></script>
+		<link rel="icon" type="image/x-icon" href="https://w7.pngwing.com/pngs/162/92/png-transparent-logo-metallica-thrash-metal-metallica-angle-text-logo.png">
 		<link rel="stylesheet" type="text/css" href="css/reset.css">
 		<link rel="stylesheet" type="text/css" href="css/style.css">
 	</head>
 	<body>
 		<section>
 			<div class="container">
+				<div class="icons">
+					<p>This is icons test</p>
+					<i class="fa-brands fa-twitter"></i>
+					<div class="fa-3x">
+						  <i class="fa-solid fa-bell fa-shake"></i>
+
+						  <i class="fa-solid fa-circle-plus fa-fade"></i>
+						  <i class="fa-solid fa-heart fa-beat-fade"></i>
+						  <i class="fa-solid fa-heart fa-beat" style="--fa-animation-duration: 0.5s;" ></i>
+						  <i class="fa-solid fa-heart fa-beat" style="--fa-animation-duration: 2s;"></i>
+						  <i class="fa-solid fa-heart fa-beat" style="--fa-beat-scale: 2.0;"></i>
+						  <i class="fa-solid fa-envelope fa-bounce" style=" --fa-bounce-start-scale-x: 1; --fa-bounce-start-scale-y: 1; --fa-bounce-jump-scale-x: 1; --fa-bounce-jump-scale-y: 1; --fa-bounce-land-scale-x: 1; --fa-bounce-land-scale-y: 1; --fa-bounce-rebound: 0;" ></i>
+					</div>
+				</div>
+
+
 				<div class="mshobeli">
 					<div class="shvili red">1</div>
 					<div class="shvili blue">2</div>
